Added query condition support